# authenticated-tensor-garbling

./: .gitignore  Cargo.toml  README.md
.planning/: FIX-ideal-preprocessing-dev-correlation.md  LABELS-BUG-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  REVIEW.md  ROADMAP.md  STATE 2.md  STATE.md
.planning/audit/: AUDIT-2.1.md  AUDIT-2.2.md  AUDIT-2.3.md  AUDIT-2.4.md  SCAFFOLDING.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-uncompressed-preprocessing/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-PLAN-bcot-migration.md  01-PLAN-keys-sharing.md  01-PLAN-matrix-ops-aes.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md  01-bcot-migration-SUMMARY.md  01-benchmarks-SUMMARY.md  01-cot-SUMMARY.md  01-fpre-replace-SUMMARY.md  01-keys-sharing-SUMMARY.md  01-leaky-tensor-SUMMARY.md  01-matrix-ops-aes-SUMMARY.md
.planning/phases/02-m1-online-ideal-fpre-benches-cleanup/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md  before.txt  deferred-items.md
.planning/phases/03-m2-generalized-tensor-macro-construction-1/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md  before.txt
.planning/phases/04-m2-pi-leakytensor-f-eq-construction-2/: 04-01-PLAN.md  04-02-PLAN.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: benchmarks.rs  network_simulator.rs
circuits/: Cargo.toml
src/: aes.rs  assemble_helpers.rs  auth_eval.rs  auth_gen.rs  auth_tensor_eval.rs  auth_tensor_fpre.rs  auth_tensor_gen.rs  auth_tensor_pre.rs  auth_unary_outer_product.rs  bcot.rs  block.rs  circuit.rs  delta.rs  feq.rs  fpre.rs  input_encoding.rs  key_matrix.rs  keys.rs  krrw.rs  leaky_tensor_pre.rs  lib.rs  macs.rs  main.rs  matrix.rs  network_simulator.rs  online.rs  preprocessing.rs  sharing.rs  tensor_eval.rs  tensor_gen.rs  tensor_macro.rs  tensor_ops.rs  tensor_pre.rs  unary_outer_product.rs
tests/: block_form_correlations.rs
tools/: comparison_table.py  parse_results.py
(+87 files in other folders)
