[workspace]
members = [
    ".",
    "circuits"
]

[package]
name = "authenticated-tensor-garbling"
version = "0.1.0"
edition = "2024"

[dependencies]
# crypto
aes = "0.9.0-pre.3"
blake3 = "1.3.3"
cipher = "0.5.0-pre.8"

# rand
rand = "0.9"
rand_chacha = "0.9"

# serialization
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.13", features = ["derive"] }
serde_arrays = "0.1"

# error/logging
thiserror = "2"

# misc
hybrid-array = "0.3"
itybity = "0.3"
once_cell = "1.21.3"

# circuits dependency
mpz-circuits = { path = "circuits" }
criterion = "0.7.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmarks"
harness = false