[package]
name = "authenticated-tensor-garbling"
version = "0.1.0"
edition = "2024"

[features]
# Re-exports crate-internal helpers (e.g. `assemble_e_input_wire_blocks_p1`,
# `assemble_c_alpha_beta_blocks_p2`) under the `bench_internals` module so the
# Criterion bench target can reach them. Off by default — these helpers are
# not part of the stable public API surface (TD-01, Phase 3.1).
bench-internals = []

[dependencies]
# crypto
aes = "0.9.0-pre.3"
blake3 = "1.3.3"
cipher = "0.5.0-pre.8"

# rand
rand = "0.9"
rand_chacha = "0.9"

# serialization
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.13", features = ["derive"] }
serde_arrays = "0.1"

# error/logging
thiserror = "2"

# misc
hybrid-array = "0.3"
itybity = "0.3"
once_cell = "1.21.3"

criterion = "0.7.0"

# async for network simulator
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench-internals"]
