[package]
name = "mpz-circuits"
version = "0.1.0"
edition = "2024"

[lib]
name = "mpz_circuits"

[features]
default = ["parse", "serde", "aes", "sha2"]
parse = ["dep:regex"]
serde = ["dep:serde", "dep:serde_arrays", "dep:bincode"]
aes = []
sha2 = ["dep:sha2"]

[dependencies]
sha2 = { version = "0.10", features = ["compress"], optional = true }

serde = { version = "1.0", optional = true, features = ["derive"] }
serde_arrays = { version = "0.1", optional = true }
bincode = { version = "1.3", optional = true }
rand = "0.9"

regex = { version = "1.10", optional = true }
once_cell = "1.21.3"
thiserror = "2"
itybity = "0.3"

[dev-dependencies]
aes = "0.9.0-pre.3"
criterion = "0.5"
